--- a/TimeTable/TimeTable/App.config
+++ b/TimeTable/TimeTable/App.config
@@ -10,6 +10,6 @@
 	
 	
 <connectionStrings>
-	<add name="TimetableEntities" connectionString="metadata=res://*/Model.Model.csdl|res://*/Model.Model.ssdl|res://*/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KOMPUTER\SQLEXPRESS;initial catalog=Timetable;integrated security=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+	<add name="TimetableEntities" connectionString="metadata=res://*/Model.Model.csdl|res://*/Model.Model.ssdl|res://*/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DIKHNICHHONOR\SQLEXPRESS;initial catalog=Timetable;integrated security=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
 </configuration>
