--- a/TimeTable/TimeTable/TimeTable.csproj
+++ b/TimeTable/TimeTable/TimeTable.csproj
@@ -79,6 +79,7 @@
     </ApplicationDefinition>
     <Compile Include="Classes\dtbCommunication.cs" />
     <Compile Include="Classes\GeneralStudyPlanClass.cs" />
+    <Compile Include="Classes\Group.cs" />
     <Compile Include="Classes\Teacher.cs" />
     <Compile Include="Classes\TimetableWeek.cs" />
     <Compile Include="Model\Audiences.cs">
@@ -163,8 +164,14 @@
     <Compile Include="WPF\Pages\EducWorkerPage.xaml.cs">
       <DependentUpon>EducWorkerPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WPF\Pages\PageAudiences.xaml.cs">
+      <DependentUpon>PageAudiences.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WPF\Pages\PageDisciplines.xaml.cs">
       <DependentUpon>PageDisciplines.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WPF\Pages\PageGroups.xaml.cs">
+      <DependentUpon>PageGroups.xaml</DependentUpon>
     </Compile>
     <Compile Include="WPF\Pages\PageSpecialities.xaml.cs">
       <DependentUpon>PageSpecialities.xaml</DependentUpon>
@@ -177,6 +184,9 @@
     </Compile>
     <Compile Include="WPF\Pages\PageTimetable.xaml.cs">
       <DependentUpon>PageTimetable.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WPF\Pages\TeacherPage.xaml.cs">
+      <DependentUpon>TeacherPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="WPF\Windows\AddEntityWindow.xaml.cs">
       <DependentUpon>AddEntityWindow.xaml</DependentUpon>
@@ -206,7 +216,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="WPF\Pages\PageAudiences.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="WPF\Pages\PageDisciplines.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WPF\Pages\PageGroups.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -223,6 +241,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="WPF\Pages\PageTimetable.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WPF\Pages\TeacherPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -302,6 +324,7 @@
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.cs</LastGenOutput>
     </Content>
+    <Resource Include="Resources\ico.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets')" />
